--- a/contacts/package.json
+++ b/contacts/package.json
@@ -6,6 +6,7 @@
     "axios": "^0.25.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-modal": "^3.14.4",
     "react-router": "^6.2.1",
     "react-router-dom": "^6.2.1",
     "react-scripts": "4.0.3",
@@ -15,7 +16,7 @@
     "web3": "^1.7.0"
   },
   "scripts": {
-    "start": "react-scripts start -p 3001",
+    "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
