--- a/contacts/package.json
+++ b/contacts/package.json
@@ -16,6 +16,10 @@
     "web-vitals": "^2.1.0",
     "web3": "^1.7.0"
   },
+  "resolutions": {
+    "//": "See https://github.com/facebook/create-react-app/issues/11773",
+    "react-error-overlay": "6.0.9"
+  },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
