--- a/contacts/package.json
+++ b/contacts/package.json
@@ -5,9 +5,11 @@
   "dependencies": {
     "axios": "^0.25.0",
     "dotenv": "^16.0.0",
+    "moralis": "^1.2.6",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-modal": "^3.14.4",
+    "react-moralis": "^1.2.2",
     "react-router": "^6.2.1",
     "react-router-dom": "^6.2.1",
     "react-scripts": "4.0.3",
